# Robot-transporting

./: .gitmodules  README.md
libs/icpSpeedTest/: CMakeLists.txt  data  main.cpp  model.csv  mrpt-slam-config.cmake  source.csv
workspace/src/van_loading/: CMakeLists.txt
workspace/src/van_loading/config/: control.yaml  filters.yaml  model.csv  params.yaml
workspace/src/van_loading/data/: 10-3:143445.csv  10-3:145355.csv  10-3:153357.csv  10-3:154047.csv  10-3:155012.csv  10-3:16356.csv  10-3:16372.csv  10-3:165727.csv  10-3:172429.csv  10-3:17265.csv  10-3:17565.csv  10-3:18043.csv  10-3:181518.csv  11-3:151930.csv  11-3:161731.csv  11-3:165845.csv  12-3:101715.csv  16-3:165127.csv  22-3:174450.csv  22-3:203039.csv  24-3-205516.csv  24-3:145317.csv  24-3:151244.csv  24-3:152747.csv  24-3:162133.csv  24-3:162731.csv  24-3:175547.csv  24-3:17634.csv  24-3:182149.csv  24-3:202248.csv  25-2:233638.csv  25-3-73335.csv  25-3-74838.csv  25-3-7558.csv  26-2:141650.csv  26-2:145125.csv  26-2:153049.csv  26-2:153523.csv  26-2:154057.csv  26-2:154521.csv  (+23 more)
workspace/src/van_loading/description/meshes/: index.html
workspace/src/van_loading/description/urdf/: display.launch  idris.urdf.xacro  idris_ackerman.urdf.xacro  index.html  urdf.rviz
workspace/src/van_loading/description/van/: model.sdf
workspace/src/van_loading/devel/: .catkin  setup.sh
workspace/src/van_loading/launch/: all.launch  automated_robot.launch  gazebo.launch  idris_sim.rviz  laserscan_filters.launch  maze_test.launch  record_path.launch  van.launch
workspace/src/van_loading/libs/libicp/: CMakeCache.txt  Makefile  cmake_install.cmake  icp  libicp.cbp
workspace/src/van_loading/libs/mrpt/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  mrpt-bayes-targets.cmake  mrpt-comms-targets.cmake  mrpt-config-config.cmake  mrpt-config-targets.cmake  mrpt-containers-targets.cmake  mrpt-core-config.cmake  mrpt-core-targets.cmake  mrpt-db-targets.cmake  mrpt-detectors-config.cmake  mrpt-detectors-targets.cmake  mrpt-expr-config.cmake  mrpt-expr-targets.cmake  mrpt-graphs-targets.cmake  mrpt-graphslam-targets.cmake  mrpt-gui-config.cmake  mrpt-gui-targets.cmake  mrpt-hmtslam-targets.cmake  mrpt-hwdrivers-targets.cmake  mrpt-img-config.cmake  mrpt-img-targets.cmake  mrpt-io-targets.cmake  mrpt-kinematics-targets.cmake  mrpt-maps-targets.cmake  mrpt-math-targets.cmake  mrpt-nanoflann-config.cmake  mrpt-nanoflann-targets.cmake  mrpt-nav-config.cmake  mrpt-nav-targets.cmake  mrpt-obs-targets.cmake  mrpt-opengl-config.cmake  mrpt-opengl-targets.cmake  mrpt-pbmap-config.cmake  mrpt-pbmap-targets.cmake  (+20 more)
workspace/src/van_loading/libs/mrpt-old/: CMakeCache.txt  Makefile  mrpt-bayes-config.cmake  mrpt-comms-config.cmake  mrpt-comms-targets.cmake  mrpt-containers-config.cmake  mrpt-core-targets.cmake  mrpt-db-config.cmake  mrpt-db-targets.cmake  mrpt-expr-targets.cmake  mrpt-graphs-config.cmake  mrpt-graphs-targets.cmake  mrpt-graphslam-config.cmake  mrpt-gui-targets.cmake  mrpt-hmtslam-config.cmake  mrpt-hwdrivers-config.cmake  mrpt-hwdrivers-targets.cmake  mrpt-io-config.cmake  mrpt-io-targets.cmake  mrpt-kinematics-config.cmake  mrpt-maps-config.cmake  mrpt-maps-targets.cmake  mrpt-math-config.cmake  mrpt-nav-config-version.cmake  mrpt-nav-targets.cmake  mrpt-obs-config.cmake  mrpt-pbmap-targets.cmake  mrpt-poses-config.cmake  mrpt-poses-targets.cmake  mrpt-random-targets.cmake  mrpt-rtti-config.cmake  mrpt-system-targets.cmake  mrpt-tfest-targets.cmake  mrpt-topography-targets.cmake
workspace/src/van_loading/libs/mrpt-old/doc/: CTestTestfile.cmake  Makefile
workspace/src/van_loading/libs/mrpt-old/lib/: libmrpt-bayes.so.1.9.9  libmrpt-config.so.1.9.9  libmrpt-db.so.1.9  libmrpt-detectors.so.1.9.9  libmrpt-graphslam.so.1.9  libmrpt-graphslam.so.1.9.9  libmrpt-hwdrivers.so.1.9.9  libmrpt-img.so.1.9.9  libmrpt-io.so.1.9.9  libmrpt-kinematics.so.1.9  libmrpt-math.so.1.9  libmrpt-opengl.so.1.9  libmrpt-pbmap.so.1.9  libmrpt-pbmap.so.1.9.9  libmrpt-poses.so.1.9  libmrpt-random.so.1.9  libmrpt-rtti.so.1.9.9  libmrpt-serialization.so.1.9.9  libmrpt-slam.so.1.9  libmrpt-slam.so.1.9.9  libmrpt-tfest.so.1.9  libmrpt-tfest.so.1.9.9  libmrpt-topography.so.1.9  libmrpt-topography.so.1.9.9
workspace/src/van_loading/libs/mrpt-old/libs/: cmake_install.cmake
workspace/src/van_loading/libs/mrpt-old/python/: CTestTestfile.cmake  Makefile
workspace/src/van_loading/libs/mrpt-old/samples/: Makefile
workspace/src/van_loading/libs/mrpt-old/tests/: CTestTestfile.cmake  Makefile
workspace/src/van_loading/libs/mrpt/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
workspace/src/van_loading/libs/mrpt/doc/: cmake_install.cmake
workspace/src/van_loading/libs/mrpt/lib/: libmrpt-bayes.so.1.9  libmrpt-comms.so.1.9  libmrpt-comms.so.1.9.9  libmrpt-config.so.1.9  libmrpt-containers.so.1.9  libmrpt-containers.so.1.9.9  libmrpt-core.so.1.9  libmrpt-core.so.1.9.9  libmrpt-db.so.1.9.9  libmrpt-detectors.so.1.9  libmrpt-expr.so.1.9  libmrpt-expr.so.1.9.9  libmrpt-graphs.so.1.9  libmrpt-graphs.so.1.9.9  libmrpt-gui.so.1.9  libmrpt-gui.so.1.9.9  libmrpt-hmtslam.so.1.9  libmrpt-hmtslam.so.1.9.9  libmrpt-hwdrivers.so.1.9  libmrpt-img.so.1.9  libmrpt-io.so.1.9  libmrpt-kinematics.so.1.9.9  libmrpt-maps.so.1.9  libmrpt-maps.so.1.9.9  libmrpt-math.so.1.9.9  libmrpt-nav.so.1.9  libmrpt-nav.so.1.9.9  libmrpt-obs.so.1.9  libmrpt-obs.so.1.9.9  libmrpt-opengl.so.1.9.9  libmrpt-poses.so.1.9.9  libmrpt-random.so.1.9.9  libmrpt-rtti.so.1.9  libmrpt-serialization.so.1.9  (+3 more)
workspace/src/van_loading/msg/: ICPDirection.msg
workspace/src/van_loading/scripts/: change_model_to_latest.py  reverse_model.py
workspace/src/van_loading/src/: automated_control.cpp  automated_movement.py  change_state.py  compare_against_model.cpp  compare_icp.cpp  getData.cpp  get_data.cpp  idris_sim.cpp  laserscan_filter.cpp  move_idris.py  record_path.cpp  test_icp.cpp
workspace/src/van_loading/worlds/: maze_test.world  walls.world
workspace/src/van_loading/worlds/MazeTest/: model.config  model.sdf
(+391 files in other folders)
